# crabify

./: Cargo.toml  README.md
src/: action.rs  app.rs  auth.rs  config.rs  error.rs  event.rs  main.rs  spotify.rs
src/ui/: help.rs  layout.rs  library.rs  liked_songs.rs  mod.rs  now_playing.rs  search.rs
